Autocorrection causes ASSERT when replacing alternative string https://bugs.webkit.org/show_bug.cgi?id=131475

Reviewed by Ryosuke Niwa.

In AlternativeTextController::applyAlternativeTextToRange(), we attempt to create
a Range that crosses from outside of a shadow root to inside of one. Instead,
we should keep the Range entirely within the shadow root.

Test: ManualTests/autocorrection/autocorrection-accept-crash.html

* editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::applyAlternativeTextToRange):

Canonical link: https://commits.webkit.org/149623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167151 268f45cc-cd09-0410-ab3c-d52691b4dbfc